tester/testsuite/extensions/arrays1/bad/bad001.jl
/* index not of integer type */

int main() {
	int[] array = new int[10];
	printInt(array["x"]);
	return 0;
}
